[gd_scene load_steps=14 format=3 uid="uid://den5o41ncyqsn"]

[ext_resource type="Script" path="res://Scripts/Neos/Boss/scrMissile.gd" id="1_5jcxj"]
[ext_resource type="Texture2D" uid="uid://dqnjfa3j6xyjf" path="res://Graphics/Sprites/Particle Textures/fire_01.png" id="2_72cey"]
[ext_resource type="AudioStream" uid="uid://dbad8fsvpe8ja" path="res://Audio/Sounds/Neos/M1_BreakBlock.wav" id="3_kxejk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30qwt"]
size = Vector2(27, 8)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_e8les"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_51rwp"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_5q4aa"]
curve = SubResource("Curve_51rwp")

[sub_resource type="Gradient" id="Gradient_nqmw7"]
offsets = PackedFloat32Array(0, 0.382716, 0.777778, 1)
colors = PackedColorArray(0.805726, 0.33642, 0.252896, 1, 1, 0.3, 0.3, 1, 0.793665, 0.299697, 0.485975, 1, 0.97324, 0.711488, 0.750487, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4urh8"]
gradient = SubResource("Gradient_nqmw7")

[sub_resource type="Curve" id="Curve_bkgnv"]
_data = [Vector2(0, 0.395604), 0.0, 0.0, 0, 0, Vector2(1, 0.186813), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_frqhx"]
curve = SubResource("Curve_bkgnv")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xaf84"]
particle_flag_disable_z = true
angle_min = -720.0
angle_max = 720.0
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.25
scale_curve = SubResource("CurveTexture_frqhx")
color_ramp = SubResource("GradientTexture1D_4urh8")
alpha_curve = SubResource("CurveTexture_5q4aa")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pfsw3"]
size = Vector2(28, 8)

[node name="objMissile" type="Node2D" groups=["Killers"]]
script = ExtResource("1_5jcxj")
metadata/_edit_group_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-2.5, 0)
shape = SubResource("RectangleShape2D_30qwt")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_e8les")
position = Vector2(-16, 0)
amount = 16
process_material = SubResource("ParticleProcessMaterial_xaf84")
texture = ExtResource("2_72cey")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.15, 1, 0.971667, 1)
polygon = PackedVector2Array(16, 0, -16, -8, -16, 8)

[node name="BulletDamage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BulletDamage"]
position = Vector2(-2.5, 0)
shape = SubResource("RectangleShape2D_30qwt")
debug_color = Color(0.90277, 0.267408, 0.400655, 0.42)

[node name="WallDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WallDetect"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_pfsw3")
debug_color = Color(0.90277, 0.267408, 0.400655, 0.42)

[node name="sndBreak" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kxejk")

[connection signal="body_entered" from="BulletDamage" to="." method="_on_bullet_damage_body_entered"]
[connection signal="body_entered" from="WallDetect" to="." method="_on_wall_detect_body_entered"]
